:sparkles: Add MobileNet ShuffleNet TunedShuffleNet

--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -31,12 +31,12 @@
    "source": [
     "# Define save/load func\n",
     "def save_checkpoint(path, epoch, model):\n",
-    "    save_path = os.path.join(path, f\"model_epoch_{epoch}.pkl\")\n",
+    "    save_path = os.path.join(path, f\"resnet_epoch_{epoch}.pkl\")\n",
     "    torch.save(model.state_dict(), save_path)\n",
     "    print(f\"Checkpoint saved to {save_path}\")\n",
     "\n",
     "def load_checkpoint(model_dir, epoch, model):\n",
-    "    load_path = os.path.join(model_dir, f\"model_epoch_{epoch}.pkl\")\n",
+    "    load_path = os.path.join(model_dir, f\"resnet_epoch_{epoch}.pkl\")\n",
     "    checkpoint = torch.load(load_path)\n",
     "    model.load_state_dict(checkpoint)\n",
     "    print(f\"Checkpoint loaded from {load_path}\")"
@@ -130,9 +130,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Dataset: 1162\n",
-      "Number of Train Dataset: 929\n",
-      "Number of Test Dataset: 233\n",
+      "Number of Dataset: 1351\n",
+      "Number of Train Dataset: 1080\n",
+      "Number of Test Dataset: 271\n",
       "epoch: 10\n",
       "batchsize: 32\n"
      ]
@@ -359,76 +359,76 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/deepstation/anaconda3/envs/jetson/lib/python3.7/site-packages/PIL/Image.py:993: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-      "  \"Palette images with Transparency expressed in bytes should be \"\n",
       "/home/deepstation/anaconda3/envs/jetson/lib/python3.7/site-packages/PIL/TiffImagePlugin.py:804: UserWarning: Corrupt EXIF data.  Expecting to read 4 bytes but only got 0. \n",
-      "  warnings.warn(str(msg))\n"
+      "  warnings.warn(str(msg))\n",
+      "/home/deepstation/anaconda3/envs/jetson/lib/python3.7/site-packages/PIL/Image.py:993: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
+      "  \"Palette images with Transparency expressed in bytes should be \"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Loss:0.49732184074819086 | Acc:80.83961248654467 (751/929)\n",
-      "Test Loss:3.3566666671207974 | Acc:61.37339055793991 (143/233)\n",
+      "Train Loss:0.5823712600942921 | Acc:76.01851851851852 (821/1080)\n",
+      "Test Loss:1.6605772748589516 | Acc:79.33579335793358 (215/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_0.pkl\n",
       "\n",
       "Epoch: 1\n",
-      "Train Loss:0.5758750187853973 | Acc:87.94402583423036 (817/929)\n",
-      "Test Loss:1.480718120932579 | Acc:85.4077253218884 (199/233)\n",
+      "Train Loss:0.26384234527016387 | Acc:91.57407407407408 (989/1080)\n",
+      "Test Loss:1.4450489170849323 | Acc:87.45387453874538 (237/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_1.pkl\n",
       "\n",
       "Epoch: 2\n",
-      "Train Loss:0.5899254566058516 | Acc:86.43702906350914 (803/929)\n",
-      "Test Loss:2.654578753880092 | Acc:80.25751072961373 (187/233)\n",
+      "Train Loss:0.18332016950144486 | Acc:93.61111111111111 (1011/1080)\n",
+      "Test Loss:1.6122268997132778 | Acc:87.82287822878229 (238/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_2.pkl\n",
       "\n",
       "Epoch: 3\n",
-      "Train Loss:0.597666417931517 | Acc:89.1280947255113 (828/929)\n",
-      "Test Loss:3.510690144130162 | Acc:60.94420600858369 (142/233)\n",
+      "Train Loss:0.05538378371035352 | Acc:97.96296296296296 (1058/1080)\n",
+      "Test Loss:1.1878579542972147 | Acc:96.30996309963099 (261/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_3.pkl\n",
       "\n",
       "Epoch: 4\n",
-      "Train Loss:0.565507855390509 | Acc:85.46824542518837 (794/929)\n",
-      "Test Loss:1.5531162108693803 | Acc:84.12017167381974 (196/233)\n",
+      "Train Loss:0.04748044696444755 | Acc:98.61111111111111 (1065/1080)\n",
+      "Test Loss:1.235338516999036 | Acc:94.09594095940959 (255/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_4.pkl\n",
       "\n",
       "Epoch: 5\n",
-      "Train Loss:0.49370475684603055 | Acc:90.95801937567276 (845/929)\n",
-      "Test Loss:1.3665519942130362 | Acc:89.27038626609442 (208/233)\n",
+      "Train Loss:0.01870080584879307 | Acc:99.53703703703704 (1075/1080)\n",
+      "Test Loss:1.131808447651565 | Acc:95.5719557195572 (259/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_5.pkl\n",
       "\n",
       "Epoch: 6\n",
-      "Train Loss:0.41624265151719253 | Acc:88.58988159311087 (823/929)\n",
-      "Test Loss:2.020889137472425 | Acc:81.54506437768241 (190/233)\n",
+      "Train Loss:0.03725506887627382 | Acc:98.79629629629629 (1067/1080)\n",
+      "Test Loss:1.1671527046710253 | Acc:96.30996309963099 (261/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_6.pkl\n",
       "\n",
       "Epoch: 7\n",
-      "Train Loss:0.316449497329692 | Acc:94.6178686759957 (879/929)\n",
-      "Test Loss:1.6710455971104758 | Acc:85.4077253218884 (199/233)\n",
+      "Train Loss:0.016773347345673862 | Acc:99.35185185185185 (1073/1080)\n",
+      "Test Loss:1.1894320379942656 | Acc:94.8339483394834 (257/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_7.pkl\n",
       "\n",
       "Epoch: 8\n",
-      "Train Loss:0.6724038708334168 | Acc:90.85037674919268 (844/929)\n",
-      "Test Loss:1.4850211468126093 | Acc:91.41630901287553 (213/233)\n",
+      "Train Loss:0.015029039088403806 | Acc:99.35185185185185 (1073/1080)\n",
+      "Test Loss:1.192505069077015 | Acc:95.5719557195572 (259/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_8.pkl\n",
       "\n",
       "Epoch: 9\n",
-      "Train Loss:0.9439973073701063 | Acc:92.35737351991389 (858/929)\n",
-      "Test Loss:2.879810333251953 | Acc:84.12017167381974 (196/233)\n",
+      "Train Loss:0.014737089767175563 | Acc:99.72222222222223 (1077/1080)\n",
+      "Test Loss:1.2042145235463977 | Acc:95.5719557195572 (259/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_9.pkl\n",
       "\n",
       "Epoch: 10\n",
-      "Train Loss:0.36647026042143505 | Acc:89.45102260495156 (831/929)\n",
-      "Test Loss:1.8277275902884347 | Acc:83.2618025751073 (194/233)\n",
+      "Train Loss:0.020554503206821048 | Acc:99.07407407407408 (1070/1080)\n",
+      "Test Loss:1.1648096698336303 | Acc:95.9409594095941 (260/271)\n",
       "Checkpoint saved to ./checkout/model_epoch_10.pkl\n",
       "\n",
       "Evaluation\n",
       "Checkpoint loaded from ./checkout/model_epoch_10.pkl\n",
-      "Accuracy: 0.8326180257510729, confusion matrix: \n",
-      "[[31 12  3]\n",
-      " [ 1 91  3]\n",
-      " [ 1 19 72]]\n"
+      "Accuracy: 0.966789667896679, confusion matrix: \n",
+      "[[84  5  0]\n",
+      " [ 1 94  0]\n",
+      " [ 2  1 84]]\n"
      ]
     }
    ],
@@ -474,5 +474,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
